force-app/main/default/objects/HAM_Event_Form_Submission_Answer__c/HAM_Event_Form_Submission_Answer__c.object-meta.xml
<CustomObject>
    <description>Stores individual question answers for a form submission. Each record represents one attendee&apos;s answer to one form element (question).</description>
    <label>HAM Event Form Submission Answer</label>
    <nameField>
        <displayFormat>FSA-{00000000}</displayFormat>
        <label>Form Submission Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Event Form Submission Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>