force-app/main/default/objects/HAM_Event_Form_Submission_Answer__c/fields/HAM_Answer__c.field-meta.xml
<CustomField>
    <fullName>HAM_Answer__c</fullName>
    <description>Short answer value (up to 255 characters) provided by the attendee for this form question.</description>
    <inlineHelpText>The attendee&apos;s answer to this form question. Use HAM_Answer_Text_Long__c for answers exceeding 255 characters.</inlineHelpText>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>