force-app/main/default/objects/HAM_Event_Form_Submission_Answer__c/fields/HAM_Answer_Text_Long__c.field-meta.xml
<CustomField>
    <fullName>HAM_Answer_Text_Long__c</fullName>
    <description>Long-form answer text (up to 30,000 characters) for answers that exceed the 255-character limit of HAM_Answer__c.</description>
    <inlineHelpText>Use this field for long answers that exceed 255 characters, such as essay responses or detailed comments.</inlineHelpText>
    <label>Answer (Long)</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>