force-app/main/default/objects/HAM_Event_Form_Submission_Answer__c/fields/HAM_Attendee__c.field-meta.xml
<CustomField>
    <fullName>HAM_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent attendee who provided this answer.</description>
    <inlineHelpText>The attendee who submitted this answer.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>CventEvents__Attendee__c</referenceTo>
    <relationshipLabel>HAM Event Form Submission Answers</relationshipLabel>
    <relationshipName>HAM_Event_Form_Submission_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>