force-app/main/default/objects/HAM_Event_Form_Submission_Answer__c/fields/HAM_BT_Form_Submission_Answer__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Form_Submission_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Traceability lookup to the original Blackthorn form submission answer this record was migrated from. Will be empty once Blackthorn is decommissioned.</description>
    <inlineHelpText>The original Blackthorn form submission answer this record was migrated from. Used for migration QC and validation only.</inlineHelpText>
    <label>BT Form Submission Answer</label>
    <referenceTo>conference360__Form_Submission_Answer__c</referenceTo>
    <relationshipLabel>HAM Event Form Submission Answers</relationshipLabel>
    <relationshipName>HAM_Event_Form_Submission_Answers_BT</relationshipName>
    <type>Lookup</type>
</CustomField>