force-app/main/default/objects/HAM_Event_Form_Submission_Answer__c/fields/HAM_Form_Element__c.field-meta.xml
<CustomField>
    <fullName>HAM_Form_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the form element (question) this answer corresponds to.</description>
    <inlineHelpText>The form question or element that this answer is responding to.</inlineHelpText>
    <label>Form Element</label>
    <referenceTo>HAM_Event_Form_Element__c</referenceTo>
    <relationshipLabel>HAM Event Form Submission Answers</relationshipLabel>
    <relationshipName>HAM_Event_Form_Submission_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>