force-app/main/default/objects/HAM_Event_Form_Submission_Answer__c/fields/HAM_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>HAM_Form_Submission__c</fullName>
    <description>Master-detail relationship to the parent form submission this answer belongs to. Deleting the submission deletes all its answers.</description>
    <inlineHelpText>The form submission this answer is part of.</inlineHelpText>
    <label>Form Submission</label>
    <referenceTo>HAM_Event_Form_Submission__c</referenceTo>
    <relationshipLabel>Form Submission Answers</relationshipLabel>
    <relationshipName>Form_Submission_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>