force-app/main/default/objects/HAM_Event_Form_Submission_Answer__c/fields/HAM_Question__c.field-meta.xml
<CustomField>
    <fullName>HAM_Question__c</fullName>
    <description>Denormalized copy of the form question text at the time of submission, for reporting and historical reference.</description>
    <inlineHelpText>The question text as it appeared on the form when this answer was submitted.</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>